test/lit/pto/tcvt_low_precision_packed_shape_invalid_a5.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

func.func @tcvt_low_precision_packed_shape_invalid_a5() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %src = pto.declare_tile -> !pto.tile_buf<loc=vec, dtype=bf16, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>
  %dst = pto.declare_tile -> !pto.tile_buf<loc=vec, dtype=!pto.f4E1M2x2, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>
  pto.tcvt ins(%src : !pto.tile_buf<loc=vec, dtype=bf16, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
           outs(%dst : !pto.tile_buf<loc=vec, dtype=!pto.f4E1M2x2, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
  return
}

// CHECK: error: 'pto.tcvt' op expects src and dst to have compatible shapes
